# NeuroBlasters

./: .gitignore  Cargo.toml  README.md  api_design.md  game_rules.md  map_creator.py  proposal.md  rust-toolchain.toml  server_design.md
.github/workflows/: ci.yml
assets/: Arcade Raiders.ttf:Zone.Identifier  banner.xcf
assets/sounds/: sources.md
code/client/: Cargo.toml
code/client/src/: app.rs  game.rs  main.rs  server.rs  ui.rs
code/client/src/app/: audio.rs  feeds.rs  fps_display.rs  game.rs  game_creation.rs  game_view.rs  in_game_menu.rs  main_menu.rs  mod.rs  model_select.rs  options_menu.rs  popup.rs  request_view.rs  room_creation.rs  room_lobby.rs  room_menu.rs  server_connect_menu.rs  server_lobby.rs  training.rs  training_menu.rs  training_mode_select.rs  winner_screen.rs
code/client/src/ui/: button.rs  field.rs  mod.rs  text.rs  text_field.rs  theme.rs
code/common/: Cargo.toml
code/common/src/: ai.rs  codec.rs  game_logic.rs  lib.rs  pathfinding.rs  protocol.rs
code/common/src/ai/: mod.rs  pathfinding.rs
code/common/src/game/: engine.rs  map.rs  mod.rs  player.rs  tank.rs
code/common/src/net/: codec.rs  protocol.rs
code/common/src/net/protocol/: messages.rs  mod.rs  objects.rs
code/common/src/rl/: features.rs  mod.rs  model.rs  policy.rs
code/server/: Cargo.toml
code/server/src/: client.rs  connection.rs  countdown.rs  game.rs  game_manager.rs  main.rs  room.rs  server.rs  server_logic.rs
code/server/src/game/: mod.rs  simulation.rs  state_countdown.rs  state_ended.rs  state_started.rs  state_waiting.rs
code/server/tests/: room_flow.rs
code/trainer/: Cargo.toml
code/trainer/src/: main.rs
neuroblasters/client/src/: main.rs
src/: main.rs  protocol.rs
src/client/: mock.rs
src/server/: game_loop.rs  mod.rs  state.rs
