[package]
name = "rust-big"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3"
parking_lot = "0.12"
rand = { version = "0.8", features = ["std"] }
renet = "1.2"
renet_netcode = "1.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
bytes = "1.7"
