[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
macroquad = "0.4"
glam = { version = "0.27.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
rand = "0.9.2"
renet = "1.2.0"
renet_netcode = "1.2.0"
image = "0.25.9"
once_cell = "1.21.3"
futures = "0.3.31"
burn = { version = "0.19.1", features = ["ndarray", "wgpu"] }
burn-ndarray = "0.19.1"