[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.17"
glam = { version = "0.27.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
rand = "0.9.2"
renet = "1.2.0"
burn = "0.19.1"
strum = "0.27"
strum_macros = "0.27"
