[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "time", "process"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
renet = "1.2.0"
renet_netcode = "1.2.0"
rand = "0.9.2"
thiserror = "2.0.17"
